syntax = "proto3";

package scheduler;

service SchedulerService {
	rpc SendNodesURL(SendNodesURLRequest) returns (SendNodesURLReply);
	rpc StartApp(StartAppRequest) returns (StartAppReply);
	rpc Status(StatusRequest) returns (StatusReply);
	rpc List(ListRequest) returns (ListReply);
	rpc Crash(CrashRequest) returns (CrashReply);
}

message SendNodesURLRequest {
	map<string, string> workers = 1;
	map<string, string> storages = 2;
}

message SendNodesURLReply {

}

message StartAppRequest {
	string input = 1;
	map<int32, string> operators = 2;
}

message StartAppReply {
	
}

message StatusRequest {

}

message StatusReply {

}

message ListRequest {

}

message ListReply {

}

message CrashRequest {

}

message CrashReply{

}