syntax = "proto3";

package storage;

service StorageService {
	rpc SendNodesURL(SendNodesURLRequest) returns (SendNodesURLReply);
}

message SendNodesURLRequest {
	map<int32, string> workers = 1;
	map<int32, string> storages = 2;
}

message SendNodesURLReply {

}